--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 # action.yml
-name: 'Docker Run Action'
-description: 'Run a command in a new container'
+name: 'infinit GitHub Action'
+description: 'Run a command in infinit GitHub Action'
 inputs:
   image:
     description: 'Image'
